cmake_minimum_required(VERSION 3.20)
project(linkedinTutoria_l)

set(CMAKE_CXX_STANDARD 14)

add_executable(linkedinTutorial main.cpp)
add_executable(helloWorld helloWorld.cpp)
add_executable(helloWorld2 helloWorld2.cpp)
add_executable(inputName inputName.cpp)
add_executable(infoType infoType.cpp)
add_executable(preprocessor_directives preprocessor_directives.cpp)
add_executable(array_example array_example.cpp)
add_executable(typeCast typeCast.cpp)
add_executable(calc_average calc_average.cpp)
add_executable(struct_example struct_example.cpp)
add_executable(class_example class_example.cpp)
